# slurm-docker-cluster

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.biomero  Dockerfile.ctld  Dockerfile.gpu  Dockerfile.ondemand  LICENSE  Makefile  README.md  README_RAY.md  build.sh  c1-deployment.yaml  c2-claim3-persistentvolumeclaim.yaml  c2-deployment.yaml  c2-service.yaml  cgroup.conf  docker-compose.biomero.yml  docker-compose.override.yml  docker-compose.playground.yml  docker-compose.yml  docker-entrypoint.sh  etc-munge-persistentvolumeclaim.yaml  fix-install.sh  generate_configs.sh  kube-deploy.sh  mysql-deployment.yaml  rm-cluster  run_examples.sh  slurm-jobdir-persistentvolumeclaim.yaml  slurm.conf  slurmctld-claim3-persistentvolumeclaim.yaml  slurmctld-deployment.yaml  slurmdbd-claim2-persistentvolumeclaim.yaml  slurmdbd-claim3-persistentvolumeclaim.yaml  slurmdbd-deployment.yaml  slurmdbd.conf  supervisord.conf  (+7 more)
.github/workflows/: build-containers.yml  build.yml  publish.yml  test.yml
Examples/: README.md  mpi_job.sh  ping.sh  ping_pong  ping_pong.c  ring.sh  simple.sh
ansible/: README.md  ansible.cfg
ansible/callbacks/: maintenance_progress.py
ansible/inventory/: slurm_inventory.py
ansible/playbooks/: emergency_resume.yml  emergency_stop.yml  rolling_maintenance.yml
ansible/tests/: test_modules.yml
awx/: .env.example  README.md  docker-compose.awx.yml  setup_awx.sh
awx/config/: credentials.py  ldap.py  ldap.py.example  receptor.conf  settings.py
awx/job_templates/: emergency_node_drain.json  emergency_resume_all.json  monthly_full_maintenance.json  on_demand_patching.json  weekly_security_patching.json
awx/nginx/: nginx.conf
awx/scripts/: backup-cron.sh  (+3 more)
configs/: slurm.conf.tpl
docs/: SLURMTUI.md
kube-manifests/: authorized-keys-configmap.yaml  c1-claim3-persistentvolumeclaim.yaml  c1-deployment.yaml  c1-service.yaml  database-auth-secret.yaml  login-deployment.yaml  login-service.yaml  munge-key-secret.yaml  mysql-deployment.yaml  mysql-service.yaml  reloader.yaml  slurm-conf-configmap.yaml  slurmctld-deployment.yaml  slurmctld-service.yaml  slurmd-deployment.yaml  slurmd-service.yaml  slurmdbd-conf-configmap.yaml  slurmdbd-deployment.yaml  slurmdbd-service.yaml  sshd-config-configmap.yaml  var-lib-mysql-persistentvolumeclaim.yaml  var-log-slurm-persistentvolumeclaim.yaml
monitoring/: docker-compose.monitoring.yml
ood/: nginx_stage.yml  ondemand-entrypoint.sh  ood_portal.yml
playground/: README.md  scale.sh
playground/cli/: pyproject.toml  setup.py
playground/cli/slurm_playground/: __init__.py  experiment.py  main.py  metrics.py  scale.py  workload.py
ray/: simple-trainer.py  slurm-basic.sh
readme/: README_CN.md
rpmbuild/: slurm.rpmmacros
sh/: build_phare.sh  dnf_build_ompi.sh  dnf_build_python3.11.sh  run.sh
slurm-cluster-chart/: Chart.yaml  values.yaml
slurmInDocker_24_11_5/: .gitignore  Dockerfile  README.md  docker-compose.yml  register_cluster.sh  update_slurmfiles.sh
slurmtui/: DESIGN.md  DOCKER.md  INSTALL.md  README.md  __init__.py  __main__.py  app.py  config.py  config.yaml.example  install.sh  pyproject.toml  requirements.txt
slurmtui/api/: __init__.py  client.py  models.py
slurmtui/utils/: __init__.py  formatters.py
slurmtui/widgets/: __init__.py  dashboard.py  jobs.py  nodes.py
(+91 files in other folders)
